Closed
Bug 262249
Opened 21 years ago
Closed 21 years ago
mozilla/tbird/firefox fails on build of nsCSSScanner.cpp using Sun Forte Developer 6.0 Update 2 compiler.
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Mitch, Assigned: dbaron)
Details
(Whiteboard: [patch])
Attachments
(1 file, 1 obsolete file)
19.33 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.8a4) Gecko/20040928
Build Identifier: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.8a4) Gecko/20040928
Building any of the mozilla and related reptiles on Solaris with the Sun Forte
Compiler yeilds
"nsCSSScanner.cpp", line 906: Error: nsSubstring::nsSubstring(const
nsSubstring&) is not accessible from nsCSSScanner::SkipCComment(unsigned&).
1 Error(s) detected.
gmake[6]: *** [nsCSSScanner.o] Error 1
gmake[6]: *** Waiting for unfinished jobs....
This is most likely due to the CVS checking yesterday for bug 261283
Reproducible: Always
Steps to Reproduce:
1. Compilemozilla/thunderbird/firefox
2.
3.
Actual Results:
Build fails
Comment 1•21 years ago
|
||
I think that by "forte" Mitch means the latest Sun compiler release: Sun Studio 9.
Mitch: am I right?
It's actually the Workshop 6.0u2 compilers. Don't know what the packaging name
is though.
Comment 3•21 years ago
|
||
Sorry, my mistake. That is the (old) Forte compilers, then. Updating the
Summmary to clarify.
Summary: mozilla/tbird/firefox fails on build of nsCSSScanner.cpp using forte compiler. → mozilla/tbird/firefox fails on build of nsCSSScanner.cpp using Sun Forte Developer 6.0 Update 2 compiler.
Comment 4•21 years ago
|
||
Also seeing this (trying to build current CVS Mozilla Suite).
I'm fedup with no one fixing this even though this is a major blocker for
testing solaris builds. I've fixed it myself. I believe this is the correct fix
using C stringification and compiles fiferox/tbird/mozilla correctly.
Alterantively for Solaris builds one can hack out the CSS_REPORT_PARSE_ERRORS
nsCSSScanner.h which is clearly the wrong thing to do. Can someone confirm the
fix on other platforms and sr/sr+ please and check in ? Thanx
Comment 7•21 years ago
|
||
confirmed the bug, that is, and the fix on Solaris/SPARC.
Assignee | ||
Comment 8•21 years ago
|
||
Comment on attachment 161876 [details] [diff] [review]
Patch
I don't get it. The code you're patching doesn't exist anymore and was never
turned on.
Attachment #161876 -
Flags: review-
Assignee | ||
Comment 9•21 years ago
|
||
Er, oh, never mind. I didn't know that code was there. It shouldn't be.
Assignee: nobody → dbaron
Assignee | ||
Updated•21 years ago
|
Component: Build Config → Style System (CSS)
Assignee | ||
Comment 10•21 years ago
|
||
Attachment #161876 -
Attachment is obsolete: true
Assignee | ||
Updated•21 years ago
|
Attachment #161882 -
Flags: superreview?(bzbarsky)
Attachment #161882 -
Flags: review?(bzbarsky)
Assignee | ||
Updated•21 years ago
|
Whiteboard: [patch]
![]() |
||
Comment 11•21 years ago
|
||
Comment on attachment 161882 [details] [diff] [review]
patch
r+sr=bzbarsky
Attachment #161882 -
Flags: superreview?(bzbarsky)
Attachment #161882 -
Flags: superreview+
Attachment #161882 -
Flags: review?(bzbarsky)
Attachment #161882 -
Flags: review+
Assignee | ||
Comment 12•21 years ago
|
||
Fix checked in to trunk, 2004-10-12 11:44 -0700.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•