Move CSS error reporting functions from parser to scanner so that scanner can report errors, and fix up the one existing error report in the scanner that I'd forgotten about.  b=262249  r+sr=bzbarsky